--- a/P007839.opf/meta.yml
+++ b/P007839.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W23379
   title: སྡོམ་གསུམ་བསྟན་པའི་སྒྲོན་མེ
-  volume: ''
+  volume:
+    83088ba5cb41418ab65a553b3ad2c2f9:
+      image_group_id: I1562
+      title: ''
+      volume_number: 1
+      total_pages: 244
   author: ''
+ebook_metadata:
+  title: སྡོམ་གསུམ་བསྟན་པའི་སྒྲོན་མེ
+  author: ''
+  sku: P007839
+  cover: cover.jpg
+  layers:
+  - pagination
