--- a/P007839.opf/meta.yml
+++ b/P007839.opf/meta.yml
@@ -10,6 +10,7 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 244
+      base_file: v001.txt
 ebook_metadata:
   title: སྡོམ་གསུམ་བསྟན་པའི་སྒྲོན་མེ
   author: ''
