--- a/P007839.opf/layers/v001/Pagination.yml
+++ b/P007839.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e67f3c947d894ecc873bf02939578d5b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4ad9b1263d9e44b495a8a44537ca60e5:
