--- a/P007839.opf/meta.yml
+++ b/P007839.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007839
 initial_creation_type: ocr
+created_at: 21/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W23379
   title: སྡོམ་གསུམ་བསྟན་པའི་སྒྲོན་མེ
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 244
       base_file: v001.txt
-ebook_metadata:
-  title: སྡོམ་གསུམ་བསྟན་པའི་སྒྲོན་མེ
-  author: ''
-  sku: P007839
-  cover: cover.jpg
-  layers:
-  - pagination
