--- a/P007839.opf/meta.yml
+++ b/P007839.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007839
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:44:19.918864
 source_metadata:
   id: bdr:W23379
   title: སྡོམ་གསུམ་བསྟན་པའི་སྒྲོན་མེ
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 244
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
